infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dataplatform
  labels:
    name: dataplatform
    environment: production
